--- a/index.org
+++ b/index.org
@@ -3001,15 +3001,18 @@ categories:
 #+name:R-data_dictionary
 #+begin_src R :session *R* :tangle R/data_dict.r :exports none :eval no
   # name:data_dict
-  data_dict <- function(.dataframe, .variable, .show_levels = -1)
+  data_dict <- function(dataframe, variable, show_levels = -1)
   {
-    summa  <- summary(.dataframe[,.variable])
+    if(is.character(dataframe[,variable])){
+      dataframe[,variable]  <- factor(dataframe[,variable])
+    }
+    summa  <- summary(dataframe[,variable])
     summa  <- as.data.frame(cbind(
-        c(.variable, rep("", length(summa) - 1)),
+        c(variable, rep("", length(summa) - 1)),
         names(summa), summa))
     summa[,1]  <- as.character(summa[,1])
     summa[,2]  <- as.character(summa[,2])
-    if(is.numeric(.dataframe[,.variable])){
+    if(is.numeric(dataframe[,variable])){
     summa$type <- c("number", rep("", nrow(summa) - 1))
     summa$cnt <- NA
     summa$pct  <- NA
@@ -3017,14 +3020,14 @@ categories:
     } else {
     summa$type <- c("character", rep("", nrow(summa) - 1))
     summa$summa  <- as.numeric(as.character(summa$summa))  
-    summa$summa2 <- rep("", nrow(summa))
+    summa$summa2 <- rep(NA, nrow(summa))
         # as.numeric(as.character(summa$V2)) ?
     summa$pct  <- round((summa$summa / sum(summa$summa)) * 100, 2)
     summa <- summa[,c(1,4,2,5,3,6)]
-    if(.show_levels > 0){
-    if(nrow(summa) > .show_levels){
-        summa <- summa[1:.show_levels,]  
-    summa <- rbind(summa, c("", "", sprintf("more than %s levels. list truncated.", .show_levels), "","", ""))
+    if(show_levels > 0){
+    if(nrow(summa) > show_levels){
+        summa <- summa[1:show_levels,]  
+    summa <- rbind(summa, c("", "", sprintf("more than %s levels. list truncated.", show_levels), "","", ""))
     }
     }
     }
