--- a/index.org
+++ b/index.org
@@ -3018,19 +3018,42 @@ categories:
     summa[,1]  <- as.character(summa[,1])
     summa[,2]  <- as.character(summa[,2])
     # summa
+  
+  
+  
+    # if char (factor)
+    if(is.factor(.dataframe[,.variable])){
+    summa$type <- c("character", rep("", nrow(summa) - 1))
+    summa$summa  <- as.numeric(as.character(summa$V3))  
+    summa$summa2 <- rep(NA, nrow(summa))
+        # as.numeric(as.character(summa$V2)) ?
+    summa$pct  <- round((summa$summa / sum(summa$summa)) * 100, 2)
+    summa <- summa[,c(1,4,2,6,5,7)]
+    if(.show_levels > 0){
+      if(nrow(summa) > .show_levels){
+        summa <- summa[1:.show_levels,]  
+        summa <- rbind(summa, c("", "",
+                                sprintf("more than %s levels. list truncated.", .show_levels),
+                                "","", "")
+                       )
+        }
+      }
+    # summa
+    } else if (
+     !all(
+        is.na(as.Date(as.character(.dataframe[,.variable]), origin = "1970-01-01"))
+        )
+      ){
     # if date
-    datevar <- as.Date(as.character(
-      .dataframe[,.variable]
-      ), origin = "1970-01-01")
+    ## datevar <- as.Date(as.character(
+    ##   .dataframe[,.variable]
+    ##   ), origin = "1970-01-01")
+    # http://stackoverflow.com/questions/18178451/is-there-a-way-to-check-if-a-column-is-a-date-in-r
     # as.Date(as.character(.dataframe[,.variable]),format="%Y-%m-%d")
     ## if(!all(is.na(datevar))){
     ##   summa[,3] <- as.character(datevar)
     ## }
-    if(
-     !all(
-        is.na(datevar)
-        )
-      ){
+      
     summa$type <- c("date", rep("", nrow(summa) - 1))
     summa$cnt <- NA
     summa$pct  <- NA
@@ -3043,21 +3066,7 @@ categories:
     summa$pct  <- NA
     summa <- summa[,c(1,4,2,3,5,6)]
     } else {
-    summa$type <- c("character", rep("", nrow(summa) - 1))
-    summa$summa  <- as.numeric(as.character(summa$summa))  
-    summa$summa2 <- rep(NA, nrow(summa))
-        # as.numeric(as.character(summa$V2)) ?
-    summa$pct  <- round((summa$summa / sum(summa$summa)) * 100, 2)
-    summa <- summa[,c(1,4,2,5,3,6)]
-    if(.show_levels > 0){
-      if(nrow(summa) > .show_levels){
-        summa <- summa[1:.show_levels,]  
-        summa <- rbind(summa, c("", "",
-                                sprintf("more than %s levels. list truncated.", .show_levels),
-                                "","", "")
-                       )
-        }
-      }
+      stop("type not character, factor, date or numeric")
     }
     names(summa)  <- c("Variable","Type","Attributes", "Value", "Count", "Percent")
   #summa
@@ -3087,6 +3096,8 @@ categories:
 #+begin_src R :session *R* :tangle no :exports none :eval no
   ################################################################
   # name:R-data_dictionary
+  require(devtools)
+  install_github("disentangle", "ivanhanigan")
   require(disentangle)
   fpath <- system.file("extdata/civst_gend_sector.csv", package = "disentangle")
   fpath
@@ -3094,9 +3105,12 @@ categories:
   civst_gend_sector$datevar <- as.Date(round(rnorm(nrow(civst_gend_sector), Sys.Date(),10)), origin = "1970-01-01")
   str(civst_gend_sector)
   #data_dict
+  data_dict(civst_gend_sector, "civil_status")
   data_dict(civst_gend_sector, "datevar")
+  
   dataDictionary <- data_dictionary(civst_gend_sector,
                                     show_levels = -1)
+  
   dataDictionary
   #write.csv(dataDictionary, "~/dataDictionary.csv", row.names = F)
 #+end_src
