--- a/index.org
+++ b/index.org
@@ -14,6 +14,29 @@
   install_github("disentangle", "ivanhanigan")
 #+end_src
 
+** COMMENT 2014-06-11-releasing-my-misc-r-package-disentangle-version-1
+#+name:releasing-my-misc-r-package-disentangle-version-1-header
+#+begin_src markdown :tangle ~/projects/ivanhanigan.github.com.raw/_posts/2014-06-11-releasing-my-misc-r-package-disentangle-version-1.md :exports none :eval no :padline no
+---
+name: releasing-my-misc-r-package-disentangle-version-1
+layout: post
+title: releasing-my-misc-r-package-disentangle-version-1
+date: 2014-06-11
+categories:
+- disentangle
+---
+
+- hello world!
+- the associated notebook is [Here](http://ivanhanigan.github.io/disentangle)
+- this blog will feature vignettes and documentation about the functions and use cases
+- [Windows Version is Downloadable Here](http://ivanhanigan.github.io/disentangle/lib/disentangle_1.0.zip)
+- Linux and Mac users can just run this R code
+
+#### R Code
+    require(devtools)
+    install_github("disentangle", "ivanhanigan")
+    
+#+end_src
 
 * Introduction
 This project is my collection of notes and customised software tools for data management, manipulation and analysis.
