note about transformations tracker

--- a/index.org
+++ b/index.org
@@ -6140,6 +6140,8 @@ scope	optional	document
 
 
 * Exploratory Data Analysis
+** transformations tracker
+see the file at [[transformations-tracker.org][transformations-tracker.org]]
 * General Purpose
 * Visualisation
 ** COMMENT QGIS
